# SovereignAI

./: .gitignore  .open_hash  .pre-commit-config.yaml  .pytest_failures.txt  =0.20.0  AGENTS.md  AGENTS_EXTENDED.md  AI_HANDOFF.md  CHANGELOG.md  CSovereignAIsession-start-test.txt  DEBT.md  DECISIONS.md  EXTERNAL_AI_REVIEW_PROMPT.md  LANDMINES.md  PLANS.md  PRINCIPLES.md  README.md  SovereignAI_Planner_Workflow_Improvements.md  bandit-baseline.json  bandit-report.json  coverage.json  mypy.ini  pyproject.toml
.Archived/: .pre-commit-config.yaml  INDEX.md  log.txt  mypy.ini
.agent/: archive
.claude/: settings.json
.devin/: agent_config.json  config.json  hooks.json  hooks.v1.json  hooks.v1.json.backup  verbosity.json
Agents/: AGENTS_TEMPLATE.md  AGENTS_TEMPLATE_USAGE.md  UNIVERSAL_RULES.md
Docs/: CLEAN_SLATE_IMPLEMENTATION_PLAN.md  CONSTITUTIONAL_REALIGNMENT_PLAN.md  Complete_System_Implementation.md  DECISIONS.md  DIRECTORY_STRUCTURE.md  Devin_Local_Plugins_for_SovereignAI.md  FOUNDING_ARCHITECTURE.md  Hook-Based-Gate-System.md  Hooks-Gate-System-Architecture.md  Persistent_Agent_Configuration.md  SovereignAI_Models_Panel_Drill_Down_Design_v1.0.md  SovereignAI_Planner_Workflow_Review glm 5.2.md  SovereignAI_Round_Table_Prompt_v1.0.md  SovereignAI_Workflow_Hole_Analysis.md  SovereignAI_Workflow_ReScan_Phase5_5.md  Verbosity_Control_Implementation.md  Workflow-Automation-Hooks.md  planner-gate-system-status.md
Rules/: Rules_Template.md  Rules_Template_Usage_Examples.md
Scripts/: check-specification-exists.ps1  log_conversation.py
Workflow/: AGENTS.md  AI_HANDOFF.md  ARCHITECTURE.md  ATTESTATION_TEMPLATE.md  OR_RULES.md  Workflow_Template.md  append_trace.py  check_dependencies.py  check_m6_namespace_collision.py  check_model_registry_transaction_safety.py  check_plan_immutability.py  check_rule_crossrefs_ar.py  check_rule_crossrefs_doc.py  check_tracing.py  close-SKILL.md  executor-OR_RULES.md  executor-checks-check_model_registry_adapter_registry.py  executor-hooks-preflight_check.py  executor-scripts-ar_checks-check_p4_compliance.py  executor-scripts-ar_checks-check_plan_immutability.py  executor-scripts-ar_checks-check_rule_conciseness.py  executor-scripts-ar_checks-check_rule_crossrefs.py  executor-scripts-ar_checks-check_rule_crossrefs_ar.py  executor-scripts-ar_checks-spec_match.py  executor-scripts-check_import_paths.py  executor-scripts-check_rule_crossrefs.py  executor-scripts-is_scan_plan.py  executor-scripts-landmine_checks-detect_m1.py  executor-scripts-landmine_checks-detect_m4.py  executor-scripts-verify_close.py  executor-scripts-verify_syntax.py  get_scoped_tests.py  move_completed_plans.py  organize_logs.py  run_all_ar_checks.py  run_all_landmine_checks.py  run_all_or_checks.py  run_failing_tests.py  run_model_registry_ar_checks.py  scan-SKILL.md  (+5 more)
adapters/: __init__.py
databases/: base.py
documents/: AGENTS-OR73-patch.md  AGENTS-roundtable-brief.md  ARCHITECT-CONDENSING-GUIDE.md  README.md  SovereignAI_Architecture_Decisions.md  SovereignAI_Codebase_Indexing_Design_v1.0.md  SovereignAI_Coding_Department_Spec.md  SovereignAI_Consolidated_Design_v1.0.md  SovereignAI_Cross_Department_Messaging_Design_v1.0.md  SovereignAI_Department_Manager_Architecture_Design_v1.0.md  SovereignAI_Design_Document_Index.md  SovereignAI_Design_Review_Brief_v1.0.md  SovereignAI_Diff_Based_Editing_Design_v1.0.md  SovereignAI_Education_Department_Spec.md  SovereignAI_Hardware_SSE_Streaming_Design_v1.0.md  SovereignAI_LLM_Function_Calling_Design_v1.0.md  SovereignAI_Library_Department_Spec.md  SovereignAI_Orchestrator_Spec.md  SovereignAI_Research_Department_Spec.md  SovereignAI_Skill_Agent_System_Design_v1.0.md  SovereignAI_UI_Specification_v1.1.md  SovereignAI_Worker_Spawning_Design_v1.0.md  handoff-prompt.md  models-panel-spec.md  ollama-scraper-architecture.md  plan-1-4-scope-adjudication-prompt.md  plan-1-4-scope-adjudication.md  plan-1-4-scope-brief.md  plan-16-report.md  plan-17-report.md  principles.md  project-vision-Rev1.md  project-vision-Rev2.md  project-vision-Rev3.md  project-vision-Rev4.md  round-table-vision-Rev1-brief.md  round-table-vision-Rev2-brief.md  round-table-vision-Rev3-brief.md  round-table-vision-Rev4-brief.md  session-context-and-decisions.md  (+2 more)
logs/: 20.6-cascade-devin-local-switch.md  execution-attestation-plan-30.md  execution-attestation-plan-32.md  execution-log-governance-execution-gap-b.md  execution-log-governance-execution-gap.md  execution-log-governance-infrastructure.md  execution-log-plan-22-rev16.md  execution-log-plan-23-rev16.md  execution-log-plan-24-rev16.md  execution-log-plan-25-rev1.md  execution-log-plan-25.1-rev1.md  execution-log-plan-25.5-Rev1.md  execution-log-plan-27-Rev5.md  execution-log-plan-29.md  execution-log-plan-30.md  execution-log-plan-31-Rev17.md  execution-log-plan-32-Rev17.md  execution-log-plan-33.md  execution-log-plan-34.md  execution-log-plan-fix-1-Rev1.md  execution-log-plan-fix-2-Rev1.md  execution-log-plan-fix-3-Rev1.md  execution-log-plan-fix-4-Rev1.md  execution-log-plan-fix-5-Rev1.md  execution-log-plan-fix-6-Rev1.md  execution-log-prompt-0.md  execution-log-prompt-1.md  execution-log-prompt-10.1.md  execution-log-prompt-10.4.md  execution-log-prompt-10.5.md  execution-log-prompt-11.md  execution-log-prompt-12.md  execution-log-prompt-13.md  execution-log-prompt-14.md  execution-log-prompt-15.1.md  execution-log-prompt-15.md  execution-log-prompt-16.md  execution-log-prompt-17.1.md  execution-log-prompt-17.2.md  execution-log-prompt-17.3.md  (+42 more)
plans/: brief-batch31-34-Rev1.md  brief-batch35-Rev1.md  executor-prompt-batch-governance.md  plan-1.0.md  plan-31-Rev1.md  plan-31-Rev15.md  plan-31-Rev17.md  plan-31-Rev5.md  plan-31-Rev6.md  plan-32-Rev1.md  plan-32-Rev10.md  plan-32-Rev13.md  plan-32-Rev16.md  plan-32-Rev6.md  plan-32-Rev7.md  plan-33-Rev13.md  plan-33-Rev15.md  plan-33-Rev7.md  plan-34-Rev1.md  plan-34-Rev10.md  plan-34-Rev14.md  plan-34-Rev16.md  plan-34-Rev2.md  plan-34-Rev5.md  plan-34-Rev6.md  plan-34-Rev7.md  plan-34-Rev8.md  plan-34-Rev9.md  plan-35-Rev1.md  plan-35.1-Rev1.md  (+4 more)
(+1495 files in other folders)
