[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereignai"
version = "0.1.0"
description = "Local-first, modular AI assistant framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AngusKingCAI"}]
# Runtime deps live in txt/requirements.txt (SSOT).
# Do NOT add [project.dependencies] — that would duplicate and drift.
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["txt/requirements.txt"]}

[tool.setuptools.packages.find]
# sovereignai/, databases/, services/, adapters/, and tui/ are installable packages.
# UIs (web/, cli/, phone/) are separate processes — NOT installable as part of the core.
include = ["sovereignai*", "databases*", "services*", "adapters*", "tui*"]
exclude = ["tests*", "web*", "cli*", "phone*", "documents*", "prompts*", "logs*", "txt*"]

[project.optional-dependencies]
# Dev-only tools — never installed in production.
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "pip-audit>=2.0",
    "vulture>=2.0",
    "detect-secrets>=1.0",
    "pre-commit>=3.0",
    "hypothesis>=6.100.0",
]

# ============================================================================
# Tool configuration below is TENTATIVE per P5 (wire as you go).
# These settings are best-effort guesses for an empty codebase. They WILL be
# tuned as Python code emerges in Plans 1+. Any /close that produces the first
# real Python file should revisit these settings.
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-vvv"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
# Docstring rules (D*) are disabled because docstrings are prohibited per AR17.
# Code must be self-documenting via naming.

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "venv", "env", ".git", "node_modules", "__pycache__", "build", "dist", ".tox", ".eggs", ".pytest_cache"]

[tool.vulture]
min_confidence = 80
exclude = [".venv", "venv", "env", ".git", "node_modules", "__pycache__", "build", "dist", ".tox", ".eggs", ".pytest_cache", ".mypy_cache", ".ruff_cache", "htmlcov"]
