[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereignai"
version = "0.2.0"
description = "Local-first, modular AI assistant framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AngusKingCAI"}]
# Runtime deps live in app/txt/requirements.txt (SSOT).
# Do NOT add [project.dependencies] — that would duplicate and drift.
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["app/txt/requirements.txt"]}

[tool.setuptools.packages.find]
# app/sovereignai/, app/databases/, app/adapters/, and app/tui/ are installable packages.
# UIs (app/web/, app/cli/, app/phone/) and services/ are separate processes — NOT installable as part of the core.
where = ["app"]
include = ["sovereignai*", "databases*", "adapters*", "tui*"]
exclude = ["*.tests*", "web*", "cli*", "phone*", "documents*", "prompts*", "logs*", "txt*", "services*"]

[project.optional-dependencies]
# Dev-only tools — never installed in production.
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "pip-audit>=2.0",
    "vulture>=2.0",
    "detect-secrets>=1.0",
    "pre-commit>=3.0",
    "hypothesis>=6.100.0",
    "tomli>=2.0",
]

# ============================================================================
# Tool configuration below is TENTATIVE per P5 (wire as you go).
# These settings are best-effort guesses for an empty codebase. They WILL be
# tuned as Python code emerges in Plans 1+. Any /close that produces the first
# real Python file should revisit these settings.
# ============================================================================

[tool.pytest.ini_options]
testpaths = [".agent/executor/tests", ".agent/executor/tests/app_tests", ".agent/executor/tests/sovereignai"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [".", "app"]
addopts = "-vvv --timeout=300 --timeout-method=thread"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
# Docstring rules (D*) are disabled because docstrings are prohibited per AR11.
# Code must be self-documenting via naming.

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["app/services", "app/sovereignai/observability"]

[tool.bandit]
exclude_dirs = [".venv", "venv", "env", ".git", "node_modules", "__pycache__", "build", "dist", ".tox", ".eggs", ".pytest_cache", ".agent"]

[tool.vulture]
min_confidence = 80
exclude = [".venv", "venv", "env", ".git", "node_modules", "__pycache__", "build", "dist", ".tox", ".eggs", ".pytest_cache", ".mypy_cache", ".ruff_cache", ".agent/executor/htmlcov"]
